[tool.poetry]
name = "leetcode-runner"
version = "0.1.0"
description = ""
authors = ["Alexey Potapov <2furius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
gql = {extras = ["requests"], version = "^3.5.0"}

[tool.poetry.scripts]

leetcode_runner = "leetcode_runner:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
